# photo-scripts

./: .gitignore  CLAUDE.md  README.md  deduplicate_photos.py  pyproject.toml  rename_duplicates.py
.claude/: settings.json
.claude/commands/: review-pr-feedback.md  start-linear-task.md
.github/workflows/: test.yml
tests/: test_deduplicate_photos.py  test_rename_duplicates.py
